--- a/CSS/output.css
+++ b/CSS/output.css
@@ -594,6 +594,18 @@ video {
   top: 48%;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -604,6 +616,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .m-0 {
@@ -722,6 +738,50 @@ video {
   margin-left: 8rem;
 }
 
+.mt-96 {
+  margin-top: 24rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.-mr-0 {
+  margin-right: -0px;
+}
+
+.-mr-2 {
+  margin-right: -0.5rem;
+}
+
+.-mr-6 {
+  margin-right: -1.5rem;
+}
+
+.-mr-20 {
+  margin-right: -5rem;
+}
+
+.-ml-20 {
+  margin-left: -5rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.mt-44 {
+  margin-top: 11rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-80 {
+  margin-top: 20rem;
+}
+
 .flex {
   display: flex;
 }
@@ -822,6 +882,22 @@ video {
   height: 3.5rem;
 }
 
+.h-\[screen\] {
+  height: screen;
+}
+
+.h-\[90vh\] {
+  height: 90vh;
+}
+
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -914,8 +990,24 @@ video {
   width: 50%;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-\[25rem\] {
+  width: 25rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-1 {
@@ -1165,6 +1257,10 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1220,6 +1316,12 @@ video {
   text-decoration-line: none;
 }
 
+@media (min-width: 640px) {
+  .sm\:z-40 {
+    z-index: 40;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mx-8 {
     margin-left: 2rem;
@@ -1260,8 +1362,20 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:-z-40 {
+    z-index: -40;
+  }
+
+  .lg\:z-40 {
+    z-index: 40;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:hidden {
